force-app/main/default/objects/VehicleDef_Dealer__c/VehicleDef_Dealer__c.object-meta.xml
<CustomObject>
    <label>Vehicle Definition Dealer</label>
    <nameField>
        <displayFormat>VDD-{00000}</displayFormat>
        <label>Vehicle Definition Dealer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Definition Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>