force-app/main/default/objects/VehicleDef_Dealer__c/fields/Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Available_Units__c</fullName>
    <label>Available Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>