force-app/main/default/objects/VehicleDef_Dealer__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Definition Dealers</relationshipLabel>
    <relationshipName>Vehicle_Def_Dealers_Account</relationshipName>
    <type>Lookup</type>
</CustomField>