force-app/main/default/objects/VehicleDef_Dealer__c/fields/Dealer_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Pincode__c</fullName>
    <label>Dealer Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>