force-app/main/default/objects/VehicleDef_Dealer__c/fields/Is_Available_For_TestDrive__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_For_TestDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available For Test Drive</label>
    <type>Checkbox</type>
</CustomField>