force-app/main/default/objects/VehicleDef_Dealer__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Vehicle Definition Dealers</relationshipLabel>
    <relationshipName>Vehicle_Definition_Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>