force-app/main/default/objects/VehicleDef_Dealer__c/fields/VehicleDefinition__c.field-meta.xml
<CustomField>
    <fullName>VehicleDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to VehicleDefinition (junction).</description>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Vehicle Definition Dealers</relationshipLabel>
    <relationshipName>Vehicle_Def_Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>